--- a/vue/package.json
+++ b/vue/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "owc-button": "^1.0.0",
+    "owc-custom-button": "^1.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
