--- a/owc-angular/package.json
+++ b/owc-angular/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest --coverage --watchAll",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
-    "owc-button": "^1.0.0",
+    "jest": "^26.6.3",
+    "owc-custom-button": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
